Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-11 02:17+0000\n"
+"POT-Creation-Date: 2022-01-05 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -494,12 +494,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:231
-msgid "Open a xref:dev-ui.adoc[Dev UI] available at http://localhost:8080/q/dev[/q/dev] and click on a `Provider: Keycloak` link in an `OpenId Connect` `Dev UI` card."
+msgid "Open a xref:dev-ui.adoc[Dev UI] available at http://localhost:8080/q/dev[/q/dev] and click on a `Provider: Keycloak` link in an `OpenID Connect` `Dev UI` card."
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:233
-msgid "You will be asked to login into a `Single Page Application` provided by `OpenId Connect Dev UI`:"
+msgid "You will be asked to login into a `Single Page Application` provided by `OpenID Connect Dev UI`:"
 msgstr ""
 
 #. type: Plain text
@@ -852,7 +852,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:422
-msgid "It is possible to configure multiple policy enforcer configurations, one per each tenant, similarly to how it can be done for xref:security-openid-connect-multitenancy.adoc[Multi-Tenant OpenId Connect Service Applications]."
+msgid "It is possible to configure multiple policy enforcer configurations, one per each tenant, similarly to how it can be done for xref:security-openid-connect-multitenancy.adoc[Multi-Tenant OpenID Connect Service Applications]."
 msgstr ""
 
 #. type: Plain text
