--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-dev-services.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-24 02:20+0000\n"
+"POT-Creation-Date: 2022-01-05 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,12 +22,12 @@ msgstr ""
 #. type: Title =
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:6
 #, no-wrap
-msgid "Dev Services and UI for OpenId Connect (OIDC)"
+msgid "Dev Services and UI for OpenID Connect (OIDC)"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:12
-msgid "This guide covers the Dev Services and UI for OpenId Connect (OIDC) Keycloak provider and explains how to support Dev Services and UI for other OpenId Connect providers.  It also describes Dev UI for all OpenId Connect providers which have already been started before Quarkus is launched in a dev mode."
+msgid "This guide covers the Dev Services and UI for OpenID Connect (OIDC) Keycloak provider and explains how to support Dev Services and UI for other OpenID Connect providers.  It also describes Dev UI for all OpenID Connect providers which have already been started before Quarkus is launched in a dev mode."
 msgstr ""
 
 #. type: Title ==
@@ -48,7 +48,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:21
-msgid "If `quarkus.oidc.auth-server-url` is already set then a generic OpenId Connect Dev Console which can be used with all OpenId Connect providers will be activated, please see <<dev-ui-all-oidc-providers,Dev UI for all OpenId Connect Providers>> for more information."
+msgid "If `quarkus.oidc.auth-server-url` is already set then a generic OpenID Connect Dev Console which can be used with all OpenID Connect providers will be activated, please see <<dev-ui-all-oidc-providers,Dev UI for all OpenID Connect Providers>> for more information."
 msgstr ""
 
 #. type: Title ==
@@ -104,7 +104,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:51
-msgid "Now open the main link:http://localhost:8080/q/dev[Dev UI page] and you will see the `OpenId Connect Card` linking to a `Keycloak` page:"
+msgid "Now open the main link:http://localhost:8080/q/dev[Dev UI page] and you will see the `OpenID Connect Card` linking to a `Keycloak` page:"
 msgstr ""
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
@@ -360,7 +360,7 @@ msgstr ""
 #. type: Title ===
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:151
 #, no-wrap
-msgid "Developing OpenId Connect Web App Applications"
+msgid "Developing OpenID Connect Web App Applications"
 msgstr ""
 
 #. type: Plain text
@@ -405,7 +405,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:174
-msgid "It will ensure that all Dev UI options described in <<develop-service-applications, Developing OpenId Connect Service Applications>> will be available when your `web-app` application is run in dev mode. The limitation of this approach is that both access and ID tokens returned with the code flow and acquired with Dev UI will be sent to the endpoint as HTTP `Bearer` tokens - which will not work well if your endpoint requires the injection of `IdToken`.  However it will work as expected if your `web-app` application only uses the access token, for example, as a source of roles or to get `UserInfo`, even if it is assumed to be a `service` application in devmode."
+msgid "It will ensure that all Dev UI options described in <<develop-service-applications, Developing OpenID Connect Service Applications>> will be available when your `web-app` application is run in dev mode. The limitation of this approach is that both access and ID tokens returned with the code flow and acquired with Dev UI will be sent to the endpoint as HTTP `Bearer` tokens - which will not work well if your endpoint requires the injection of `IdToken`.  However it will work as expected if your `web-app` application only uses the access token, for example, as a source of roles or to get `UserInfo`, even if it is assumed to be a `service` application in devmode."
 msgstr ""
 
 #. type: Title ===
@@ -421,7 +421,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:181
-msgid "It is also recommended to run the integration tests against Keycloak using `Dev Services for Keycloak`.  Please see xref:security-openid-connect.adoc#integration-testing-keycloak-devservices[Testing OpenId Connect Service Applications with Dev Services] and xref:security-openid-connect-web-authentication.adoc#integration-testing-keycloak-devservices[Testing OpenId Connect WebApp Applications with Dev Services] for more information."
+msgid "It is also recommended to run the integration tests against Keycloak using `Dev Services for Keycloak`.  Please see xref:security-openid-connect.adoc#integration-testing-keycloak-devservices[Testing OpenID Connect Service Applications with Dev Services] and xref:security-openid-connect-web-authentication.adoc#integration-testing-keycloak-devservices[Testing OpenID Connect WebApp Applications with Dev Services] for more information."
 msgstr ""
 
 #. type: Title ===
@@ -504,7 +504,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:216
-msgid "The main Dev UI page will include an empty `OpenId Connect Card` when `Dev Services for Keycloak` is disabled and the `quarkus.oidc.auth-server-url` property has not been initialized:"
+msgid "The main Dev UI page will include an empty `OpenID Connect Card` when `Dev Services for Keycloak` is disabled and the `quarkus.oidc.auth-server-url` property has not been initialized:"
 msgstr ""
 
 #. type: Target for macro image
@@ -515,23 +515,23 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:220
-msgid "If `quarkus.oidc.auth-server-url` is already set then a generic OpenId Connect Dev Console which can be used with all OpenId Connect providers may be activated, please see <<dev-ui-all-oidc-providers,Dev UI for all OpenId Connect Providers>> for more information."
+msgid "If `quarkus.oidc.auth-server-url` is already set then a generic OpenID Connect Dev Console which can be used with all OpenID Connect providers may be activated, please see <<dev-ui-all-oidc-providers,Dev UI for all OpenID Connect Providers>> for more information."
 msgstr ""
 
 #. type: Title ==
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:222
 #, no-wrap
-msgid "Dev UI for all OpenId Connect Providers"
+msgid "Dev UI for all OpenID Connect Providers"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:225
-msgid "If `quarkus.oidc.auth-server-url` points to an already started OpenId Connect provider (which can be Keycloak or other provider), `quarkus.oidc.auth-server-url` is set to `service` (which is a default value) and at least `quarkus.oidc.client-id` is set then `Dev UI for all OpenId Connect Providers` will be activated."
+msgid "If `quarkus.oidc.auth-server-url` points to an already started OpenID Connect provider (which can be Keycloak or other provider), `quarkus.oidc.auth-server-url` is set to `service` (which is a default value) and at least `quarkus.oidc.client-id` is set then `Dev UI for all OpenID Connect Providers` will be activated."
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:227
-msgid "Setting `quarkus.oidc.credentials.secret` will mostly likely be required for Keycloak and other providers for the authorization code flow initiated from Dev UI to complete, unless the client identified with `quarkus.oidc.client-id` is configured as a public client in your OpenId Connect provider's administration console."
+msgid "Setting `quarkus.oidc.credentials.secret` will mostly likely be required for Keycloak and other providers for the authorization code flow initiated from Dev UI to complete, unless the client identified with `quarkus.oidc.client-id` is configured as a public client in your OpenID Connect provider's administration console."
 msgstr ""
 
 #. type: Plain text
@@ -551,7 +551,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:238
-msgid "If the provider metadata discovery has been successful then, after you open the main link:http://localhost:8080/q/dev[Dev UI page], you will see the `OpenId Connect Card` page linking to `Dev Console`:"
+msgid "If the provider metadata discovery has been successful then, after you open the main link:http://localhost:8080/q/dev[Dev UI page], you will see the `OpenID Connect Card` page linking to `Dev Console`:"
 msgstr ""
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
@@ -583,7 +583,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:251
-msgid "Some providers such as `Auth0` do not support a standard RP initiated logout so the provider specific logout properties will have to be confogured for a logout option be visible, please see xref:security-openid-connect-web-authentication.adoc#user-initiated-logout[OpenId Connect User-Initiated Logout] for more information."
+msgid "Some providers such as `Auth0` do not support a standard RP initiated logout so the provider specific logout properties will have to be confogured for a logout option be visible, please see xref:security-openid-connect-web-authentication.adoc#user-initiated-logout[OpenID Connect User-Initiated Logout] for more information."
 msgstr ""
 
 #. type: Plain text
@@ -602,7 +602,7 @@ msgstr ""
 #. type: Title ==
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:260
 #, no-wrap
-msgid "Dev Services and UI Support for other OpenId Connect Providers"
+msgid "Dev Services and UI Support for other OpenID Connect Providers"
 msgstr ""
 
 #. type: Plain text
@@ -612,7 +612,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:265
-msgid "The build step dealing with the `Dev Services` should additionally register two runtime properties into the \"io.quarkus.quarkus-oidc\" namespace: `oidcProviderName` (for example, `Google`) and `oidcProviderUrlBase` (for example: `mycompany.devservices-google`) for the `OpenId Connect Card` to link to the Dev UI page representing your provider, for example:"
+msgid "The build step dealing with the `Dev Services` should additionally register two runtime properties into the \"io.quarkus.quarkus-oidc\" namespace: `oidcProviderName` (for example, `Google`) and `oidcProviderUrlBase` (for example: `mycompany.devservices-google`) for the `OpenID Connect Card` to link to the Dev UI page representing your provider, for example:"
 msgstr ""
 
 #. type: delimited block -
