--- a/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-10 02:16+0000\n"
+"POT-Creation-Date: 2022-01-05 02:20+0000\n"
 "PO-Revision-Date: 2021-05-12 14:05+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -34,7 +34,7 @@ msgstr "このガイドでは、Quarkusアプリケーションが https://githu
 #: upstream/_versions/main/guides/security-jwt.adoc:18
 #, fuzzy
 #| msgid "Quarkus OpenId Connect extension also supports Bearer Token Authorization and uses `smallrye-jwt` to represent the bearer tokens as `JsonWebToken`, please read the link:security-openid-connect[Using OpenID Connect to Protect Service Applications] guide for more information.  OpenId Connect extension has to be used if the Quarkus application needs to authenticate the users using OIDC Authorization Code Flow, please read link:security-openid-connect-web-authentication[Using OpenID Connect to Protect Web Applications] guide for more information."
-msgid "Quarkus OpenId Connect `quarkus-oidc` extension also supports Bearer Token Authorization and uses `smallrye-jwt` to represent the bearer tokens as `JsonWebToken`, please read the xref:security-openid-connect.adoc[Using OpenID Connect to Protect Service Applications] guide for more information.  OpenId Connect extension has to be used if the Quarkus application needs to authenticate the users using OIDC Authorization Code Flow, please read xref:security-openid-connect-web-authentication.adoc[Using OpenID Connect to Protect Web Applications] guide for more information."
+msgid "Quarkus OpenID Connect `quarkus-oidc` extension also supports Bearer Token Authorization and uses `smallrye-jwt` to represent the bearer tokens as `JsonWebToken`, please read the xref:security-openid-connect.adoc[Using OpenID Connect to Protect Service Applications] guide for more information.  OpenID Connect extension has to be used if the Quarkus application needs to authenticate the users using OIDC Authorization Code Flow, please read xref:security-openid-connect-web-authentication.adoc[Using OpenID Connect to Protect Web Applications] guide for more information."
 msgstr "Quarkus OpenId Connect エクステンションは、ベアラートークンの認証もサポートしており、 `smallrye-jwt` を使用してベアラートークンを `JsonWebToken` として表現します。詳しくは link:security-openid-connect[Using OpenID Connect to Protect Service Applications] ガイドをご覧ください。OpenId Connect extensionは、QuarkusアプリケーションがOIDC Authorization Code Flowを使用してユーザーを認証する必要がある場合に使用する必要があります。詳しくは link:security-openid-connect-web-authentication[Using OpenID Connect to Protect Web Applications] ガイドをご覧ください。"
 
 #. type: Title ==
@@ -1468,7 +1468,7 @@ msgstr "Wiremock"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-jwt.adoc:818
-msgid "If you configure `mp.jwt.verify.publickey.location` to point to HTTPS or HTTP based JsonWebKey (JWK) set then you can use the same approach as described in the xref:security-openid-connect.adoc#integration-testing[OpenId Connect Bearer Token Integration testing] `Wiremock` section but only change the `application.properties` to use MP JWT configuration properties instead:"
+msgid "If you configure `mp.jwt.verify.publickey.location` to point to HTTPS or HTTP based JsonWebKey (JWK) set then you can use the same approach as described in the xref:security-openid-connect.adoc#integration-testing[OpenID Connect Bearer Token Integration testing] `Wiremock` section but only change the `application.properties` to use MP JWT configuration properties instead:"
 msgstr ""
 
 #. type: delimited block -
@@ -1489,7 +1489,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-jwt.adoc:830
-msgid "If you work with Keycloak and configure `mp.jwt.verify.publickey.location` to point to HTTPS or HTTP based JsonWebKey (JWK) set then you can use the same approach as described in the xref:security-openid-connect.adoc#integration-testing-keycloak[OpenId Connect Bearer Token Integration testing] `Keycloak` section but only change the `application.properties` to use MP JWT configuration properties instead:"
+msgid "If you work with Keycloak and configure `mp.jwt.verify.publickey.location` to point to HTTPS or HTTP based JsonWebKey (JWK) set then you can use the same approach as described in the xref:security-openid-connect.adoc#integration-testing-keycloak[OpenID Connect Bearer Token Integration testing] `Keycloak` section but only change the `application.properties` to use MP JWT configuration properties instead:"
 msgstr ""
 
 #. type: Title ====
@@ -1500,7 +1500,7 @@ msgstr "ローカル公開鍵"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-jwt.adoc:842
-msgid "You can use the same approach as described in the xref:security-openid-connect#integration-testing.adoc[OpenId Connect Bearer Token Integration testing] `Local Public Key` section but only change the `application.properties` to use MP JWT configuration properties instead:"
+msgid "You can use the same approach as described in the xref:security-openid-connect#integration-testing.adoc[OpenID Connect Bearer Token Integration testing] `Local Public Key` section but only change the `application.properties` to use MP JWT configuration properties instead:"
 msgstr ""
 
 #. type: delimited block -
