updated "buid time" translation.

--- a/l10n/po/ja_JP/_guides/reaugmentation.adoc.po
+++ b/l10n/po/ja_JP/_guides/reaugmentation.adoc.po
@@ -106,12 +106,12 @@ msgstr ""
 #: upstream/_guides/reaugmentation.adoc:54
 #, no-wrap
 msgid "2. Re-augment your application with a different build time configuration"
-msgstr "2. ビルドタイムの設定を変えて、アプリケーションを再ビルドする"
+msgstr "2. ビルド時の設定を変えて、アプリケーションを再ビルドする"
 
 #. type: Plain text
 #: upstream/_guides/reaugmentation.adoc:57
 msgid "In order to re-augment your Quarkus application with different build time properties, start the application with the desired configuration plus the `quarkus.launch.rebuild` system property set to `true`."
-msgstr "異なるビルドタイムプロパティでQuarkusアプリケーションを再オーグメンテーションするには、目的の設定に加えて、 `quarkus.launch.rebuild` システムプロパティを `true` に設定してアプリケーションを起動します。"
+msgstr "異なるビルド時のプロパティでQuarkusアプリケーションを再オーグメンテーションするには、目的の設定に加えて、 `quarkus.launch.rebuild` システムプロパティを `true` に設定してアプリケーションを起動します。"
 
 #. type: Plain text
 #: upstream/_guides/reaugmentation.adoc:59
