Update .po files

--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-01-07 05:11+0000\n"
+"POT-Creation-Date: 2022-01-07 11:12+0000\n"
 "PO-Revision-Date: 2022-01-07 13:52+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -482,8 +482,9 @@ msgstr "/guides/quarkus-runtime-base-image"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
-#, no-wrap
-msgid "Learn how you can reduce the isze of your native executables with UPX."
+#, fuzzy, no-wrap
+#| msgid "Learn how you can reduce the isze of your native executables with UPX."
+msgid "Learn how you can reduce the size of your native executables with UPX."
 msgstr "UPXを使用して、ネイティブ実行ファイルのサイズを減らす方法をご紹介します。"
 
 #. type: Hash Value - Key: title
