--- a/l10n/po/ja_JP/_versions/main/guides/opentelemetry.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/opentelemetry.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-22 02:25+0000\n"
+"POT-Creation-Date: 2022-01-08 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -338,7 +338,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/opentelemetry.adoc:163
-msgid "Start the OpenTelemetry Collector and Jaeger system via the following docker-compose file that you can launch via `docker-compose run -d`:"
+msgid "Start the OpenTelemetry Collector and Jaeger system via the following `docker-compose.yml` file that you can launch via `docker-compose up -d`:"
 msgstr ""
 
 #. type: delimited block -
