Update .po files

--- a/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-22 15:04+0000\n"
+"POT-Creation-Date: 2022-01-10 17:11+0000\n"
 "PO-Revision-Date: 2021-03-12 12:41+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -28,7 +28,9 @@ msgstr "Quarkus - Contexts and Dependency Injection"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:17
-msgid "Quarkus DI solution (also called ArC) is based on the http://docs.jboss.org/cdi/spec/2.0/cdi-spec.html[Contexts and Dependency Injection for Java 2.0, window=\"_blank\"] specification.  However, it is not a full CDI implementation verified by the TCK.  Only a subset of the CDI features is implemented - see also <<supported_features,the list of supported features>> and <<limitations,the list of limitations>>."
+#, fuzzy
+#| msgid "Quarkus DI solution (also called ArC) is based on the http://docs.jboss.org/cdi/spec/2.0/cdi-spec.html[Contexts and Dependency Injection for Java 2.0, window=\"_blank\"] specification.  However, it is not a full CDI implementation verified by the TCK.  Only a subset of the CDI features is implemented - see also <<supported_features,the list of supported features>> and <<limitations,the list of limitations>>."
+msgid "Quarkus DI solution (also called ArC) is based on the https://jakarta.ee/specifications/cdi/2.0/cdi-spec-2.0.html[Contexts and Dependency Injection for Java 2.0, window=\"_blank\"] specification.  However, it is not a full CDI implementation verified by the TCK.  Only a subset of the CDI features is implemented - see also <<supported_features,the list of supported features>> and <<limitations,the list of limitations>>."
 msgstr "Quarkus の DI ソリューション (ArC とも呼ばれる) は、link:http://docs.jboss.org/cdi/spec/2.0/cdi-spec.html[Contexts and Dependency Injection for Java 2.0, window=\"_blank\"] 仕様に基づいています。しかし、TCK によって検証された CDI の完全な実装ではありません。CDI 機能のサブセットのみが実装されています。link:#supported_features[サポートされている機能の一覧] と link:#limitations[制限事項の一覧] も参照してください。"
 
 #. type: Plain text
@@ -51,7 +53,9 @@ msgstr "Bean の検出"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:28
-msgid "Bean discovery in CDI is a complex process which involves legacy deployment structures and accessibility requirements of the underlying module architecture.  However, Quarkus is using a *simplified bean discovery*.  There is only single bean archive with the https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#default_bean_discovery[bean discovery mode `annotated`, window=\"_blank\"] and no visibility boundaries."
+#, fuzzy
+#| msgid "Bean discovery in CDI is a complex process which involves legacy deployment structures and accessibility requirements of the underlying module architecture.  However, Quarkus is using a *simplified bean discovery*.  There is only single bean archive with the https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#default_bean_discovery[bean discovery mode `annotated`, window=\"_blank\"] and no visibility boundaries."
+msgid "Bean discovery in CDI is a complex process which involves legacy deployment structures and accessibility requirements of the underlying module architecture.  However, Quarkus is using a *simplified bean discovery*.  There is only single bean archive with the https://jakarta.ee/specifications/cdi/2.0/cdi-spec-2.0.html#default_bean_discovery[bean discovery mode `annotated`, window=\"_blank\"] and no visibility boundaries."
 msgstr "CDI での Bean 検出は、レガシーなデプロイメント構造と、基礎となるモジュールアーキテクチャーのアクセシビリティ要件を含む複雑なプロセスです。しかし、Quarkusは *簡素化された Bean 検出* を使用しています。link:https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#default_bean_discovery[Bean 検出モード `annotated`, window=\"_blank\"] と可視性の境界線がない単一の Bean アーカイブのみが存在します。"
 
 #. type: Plain text
@@ -86,7 +90,9 @@ msgstr "Quarkus の統合コード"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:41
-msgid "Bean classes that don't have a http://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#bean_defining_annotations[bean defining annotation, window=\"_blank\"] are not discovered.  This behavior is defined by CDI.  But producer methods and fields and observer methods are discovered even if the declaring class is not annotated with a bean defining annotation (this behavior is different to what is defined in CDI).  In fact, the declaring bean classes are considered annotated with `@Dependent`."
+#, fuzzy
+#| msgid "Bean classes that don't have a http://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#bean_defining_annotations[bean defining annotation, window=\"_blank\"] are not discovered.  This behavior is defined by CDI.  But producer methods and fields and observer methods are discovered even if the declaring class is not annotated with a bean defining annotation (this behavior is different to what is defined in CDI).  In fact, the declaring bean classes are considered annotated with `@Dependent`."
+msgid "Bean classes that don't have a https://jakarta.ee/specifications/cdi/2.0/cdi-spec-2.0.html#bean_defining_annotations[bean defining annotation, window=\"_blank\"] are not discovered.  This behavior is defined by CDI.  But producer methods and fields and observer methods are discovered even if the declaring class is not annotated with a bean defining annotation (this behavior is different to what is defined in CDI).  In fact, the declaring bean classes are considered annotated with `@Dependent`."
 msgstr "link:http://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#bean_defining_annotations[Bean 定義アノテーション, window=\"_blank\"] を持たない Bean クラスは検出されない。この動作は CDI で定義されています。しかし、producer  メソッドやフィールド、observer  メソッドは、宣言クラスが Bean 定義アノテーションを持たない場合でも検出されます (この動作は CDI で定義されているものとは異なります)。実際には、宣言 Bean クラスは `@Dependent` でアノテートされていると見なされます。"
 
 #. type: Plain text
