--- a/l10n/po/ja_JP/_guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_guides/lifecycle.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-22 15:04+0000\n"
+"POT-Creation-Date: 2022-01-10 17:11+0000\n"
 "PO-Revision-Date: 2021-12-01 13:57+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -426,7 +426,9 @@ msgstr "JVMモードでは、 `StartupEvent`  は常に `@Initialized(Applicatio
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:187
-msgid "In CDI applications, an event with qualifier `@Initialized(ApplicationScoped.class)` is fired when the application context is initialized. See https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#application_context[the spec, window=\"_blank\"] for more info."
+#, fuzzy
+#| msgid "In CDI applications, an event with qualifier `@Initialized(ApplicationScoped.class)` is fired when the application context is initialized. See https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#application_context[the spec, window=\"_blank\"] for more info."
+msgid "In CDI applications, an event with qualifier `@Initialized(ApplicationScoped.class)` is fired when the application context is initialized. See https://jakarta.ee/specifications/cdi/2.0/cdi-spec-2.0.html#application_context[the spec, window=\"_blank\"] for more info."
 msgstr "CDI アプリケーションでは、アプリケーションコンテキストが初期化されると、修飾子 `@Initialized(ApplicationScoped.class)`  を持つイベントが発生します。詳細は link:https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#application_context[仕様, window=_blank]を参照してください。"
 
 #. type: Title ===
