--- a/l10n/po/ja_JP/_guides/liquibase-mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/liquibase-mongodb.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-19 00:06+0000\n"
+"POT-Creation-Date: 2022-01-10 17:11+0000\n"
 "PO-Revision-Date: 2021-11-14 20:33+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -170,8 +170,8 @@ msgid ""
 "        xmlns=\"http://www.liquibase.org/xml/ns/dbchangelog\"\n"
 "        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\n"
 "        xmlns:ext=\"http://www.liquibase.org/xml/ns/dbchangelog-ext\"\n"
-"        xsi:schemaLocation=\"http://www.liquibase.org/xml/ns/dbchangelog http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.6.xsd\n"
-"        http://www.liquibase.org/xml/ns/dbchangelog-ext http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-ext.xsd\">\n"
+"        xsi:schemaLocation=\"http://www.liquibase.org/xml/ns/dbchangelog https://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-4.4.xsd\n"
+"        http://www.liquibase.org/xml/ns/dbchangelog-ext https://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-ext.xsd\">\n"
 msgstr ""
 
 #. type: delimited block -
