--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-17 02:22+0000\n"
+"POT-Creation-Date: 2022-01-11 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -445,8 +445,8 @@ msgstr ""
 msgid ""
 "`Path archiveRoot` :: +++<i>No Javadoc found</i>+++\n"
 "`Collection excludedFromIndexing` :: +++<i>No Javadoc found</i>+++\n"
-"`PathsCollection rootDirs` :: +++<i>No Javadoc found</i>+++\n"
-"`PathsCollection paths` :: +++<i>No Javadoc found</i>+++"
+"`PathCollection rootDirs` :: +++<i>No Javadoc found</i>+++\n"
+"`PathCollection paths` :: +++<i>No Javadoc found</i>+++"
 msgstr ""
 
 #. type: Table
