--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-05 02:21+0000\n"
+"POT-Creation-Date: 2022-01-11 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -32,7 +32,7 @@ msgstr "このガイドでは以下の使い方を解説しています。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:14
-msgid "`quarkus-oidc-client`, `quarkus-oidc-client-reactive-filter` and `quarkus-oidc-client-filter` extensions to acquire and refresh access tokens from OpenID Connect and OAuth 2.0 compliant Authorization Servers such as https://www.keycloak.org/about.html[Keycloak]"
+msgid "`quarkus-oidc-client`, `quarkus-oidc-client-reactive-filter` and `quarkus-oidc-client-filter` extensions to acquire and refresh access tokens from OpenID Connect and OAuth 2.0 compliant Authorization Servers such as https://www.keycloak.org[Keycloak]"
 msgstr ""
 
 #. type: Plain text
